# youtube-to-obsidian

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.ko.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: summarize-video-fallback.yml  summarize-video.yml
notes_project/: __init__.py  __main__.py  format_md.py  summarize.py  vault_indexer.py  youtube.py
scripts/: recategorize.py
tests/: test_format_md.py  test_vault_indexer.py
vault.example/: Dashboard.md
vault.example/.obsidian/: app.json
vault.example/templates/: youtube-summary.md
